--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.3.4",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
